--- a/_posts/2018-10-08-writter.html
+++ b/_posts/2018-10-08-writter.html
@@ -4,6 +4,6 @@ category: paid
 price: 29
 tags: Project
 img: assets/img/themes/writter.png
-download: https://bit.ly/buy-writter-theme
-preview: http://ghost-writter.electronthemes.com/
+download: http://redirect.electronthemes.com/Writter-buy
+preview: http://redirect.electronthemes.com/writter-ghost
 ---
